@@ -2,6 +2,7 @@ package com.fastcampus.loan.service;
 
 import com.fastcampus.loan.exception.BaseException;
 import com.fastcampus.loan.exception.ResultType;
+import com.fastcampus.loan.repository.ApplicationRepository;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
@@ -23,19 +24,36 @@ public class FileStorageServiceImpl implements FileStorageService {
   @Value("${spring.servlet.multipart.location}")
   private String uploadPath;
 
+  private final ApplicationRepository applicationRepository;
+
   @Override
-  public void save(MultipartFile file) {
+  public void save(Long applicationId, MultipartFile file) {
+    if (!isPresentApplication(applicationId)) {
+      throw new BaseException(ResultType.SYSTEM_ERROR);
+    }
+
     try {
-      Files.copy(file.getInputStream(), Paths.get(uploadPath).resolve(file.getOriginalFilename()));
+      String applicationPath = uploadPath.concat("/" + applicationId);
+      Path directoryPath = Path.of(applicationPath);
+      if (!Files.exists(directoryPath)) {
+        Files.createDirectory(directoryPath);
+      }
+
+      Files.copy(file.getInputStream(), Paths.get(applicationPath).resolve(file.getOriginalFilename()));
     } catch (Exception e) {
       throw new BaseException(ResultType.SYSTEM_ERROR);
     }
   }
 
   @Override
-  public Resource load(String filename) {
+  public Resource load(Long applicationId, String filename) {
+    if (!isPresentApplication(applicationId)) {
+      throw new BaseException(ResultType.SYSTEM_ERROR);
+    }
+
     try {
-      Path file = Paths.get(uploadPath).resolve(filename);
+      String applicationPath = uploadPath.concat("/" + applicationId);
+      Path file = Paths.get(applicationPath).resolve(filename);
       Resource resource = new UrlResource(file.toUri());
 
       if (resource.exists() || resource.isReadable()) {
@@ -49,16 +67,30 @@ public class FileStorageServiceImpl implements FileStorageService {
   }
 
   @Override
-  public void deleteAll() {
-    FileSystemUtils.deleteRecursively(Paths.get(uploadPath).toFile());
+  public void deleteAll(Long applicationId) {
+    if (!isPresentApplication(applicationId)) {
+      throw new BaseException(ResultType.SYSTEM_ERROR);
+    }
+
+    String applicationPath = uploadPath.concat("/" + applicationId);
+    FileSystemUtils.deleteRecursively(Paths.get(applicationPath).toFile());
   }
 
   @Override
-  public Stream<Path> loadAll() {
+  public Stream<Path> loadAll(Long applicationId) {
+    if (!isPresentApplication(applicationId)) {
+      throw new BaseException(ResultType.SYSTEM_ERROR);
+    }
+
     try {
-      return Files.walk(Paths.get(uploadPath), 1).filter(path -> !path.equals(Paths.get(uploadPath)));
+      String applicationPath = uploadPath.concat("/" + applicationId);
+      return Files.walk(Paths.get(applicationPath), 1).filter(path -> !path.equals(Paths.get(uploadPath)));
     } catch (IOException e) {
       throw new BaseException(ResultType.SYSTEM_ERROR);
     }
+  }
+
+  private boolean isPresentApplication(Long applicationId) {
+    return applicationRepository.findById(applicationId).isPresent();
   }
 }
